# class_assigner_dx

./: Cargo.toml  Dioxus.toml  index.html
.github/workflows/: deploy.yml
assets/: class-assigner-dx-dxh3be188d18921d17a.js  class-assigner-dx-dxhb58f767bd90e185.js  class-assigner-dx_bg-dxh6bf5b28347adce65.wasm  class-assigner-dx_bg-dxhfe78bbefd3946b1.wasm  main-dxhb470ea107153cf.css  main-dxhea61321b903121d.css  main.css  tailwind-dxhd29b31158cea22.css  tailwind-dxhd2e2af2b36dc1146.css  tailwind.css
src/: main.rs
