[package]
name = "class-assigner-dx"
version = "0.1.0"

authors = ["wdpk39 <wdpk39@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-logger = "0.7"
log = "0.4"
gloo-timers = "0.3"

rand = "0.9"
rand_distr = "0.5"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
